// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`browserslist-to-esbuild > should no support android 4 1`] = `
[
  "chrome142",
]
`;

exports[`browserslist-to-esbuild > should work with android and ios 1`] = `
[
  "chrome142",
  "ios11",
]
`;

exports[`browserslist-to-esbuild > should work with ios 1`] = `
[
  "ios9",
]
`;

exports[`browserslist-to-esbuild > works by passing browsers as array 1`] = `
[
  "chrome109",
  "edge140",
  "firefox143",
  "ios11",
  "opera122",
  "safari26",
]
`;

exports[`browserslist-to-esbuild > works by passing browsers as string 1`] = `
[
  "chrome141",
  "edge141",
  "firefox143",
  "ie10",
  "ios18.5",
  "opera121",
  "safari26",
]
`;
